Add placeholder page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Share" rel="stylesheet">
-    <link rel="stylesheet" href="OS.css">
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Raleway" rel="stylesheet" id="page-fonts">
+    <link href="index.css" rel="stylesheet" id="page-style">
   </head>
-  <body></body>
+  <body>
+    <div id="notice"><div><span>Oh! No scripts?<br>Try turning them on!</span></div></div>
+  </body>
   <script src="load.js"></script>
 </html>
