Added Font Awesome
Thanks, @herohamp, for the idea

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Lobster|Raleway" rel="stylesheet" id="page-fonts">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" id="page-fonts">
     <link href="index.css" rel="stylesheet" id="page-style">
+    <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
   </head>
   <body>
     <div id="notice"><div><span>Oh! No scripts?<br>Try turning them on!</span></div></div>
