--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
   </head>
   <body>
-    <div id="notice"><div><span>Oh! No scripts?<br>Try turning them on!</span></div></div>
+    <div id="notice"><span>Oh! No scripts?<br>Try turning them on!</span></div>
   </body>
   <script async>
     document.querySelector("#notice span").innerHTML = 'NAOS.js<br><i class="fa fa-3x fa-cog fa-spin" aria-hidden="true"></i>'
